--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,30 +8,17 @@ html, body{
 	background: #012;
 	color: #ace;
 }
-header nav ul{
-	display: flex;
+ul{
 	list-style: none;
-	justify-content: space-between;
-	font-size: 3rem;
 	user-select: none;
+}
+header nav ul{
+	gap: 1px;
+	font-size: 3rem;
 	text-shadow: -1px -1px #fff, -1px 0 #fff, 0 -1px #fff, 1px 1px #000, 1px 0 #000, 0 1px #000;
 }
-header nav ul li{
-	transition: .2s;
-	position: relative;
-	top: 0;
-	background: #024;
-	color: #048;
-	width: 33%;
-	text-align: center;
-}
-header nav ul li:hover{
-	color: #08f;
-	top: 1px;
-}
-header nav ul li:active{
-	color: #0ff;
-	top: 2px;
+header nav li{
+	flex-grow: 1;
 }
 section{
 	border: 1px solid red;
@@ -39,30 +26,77 @@ section{
 	max-width: 100vmin;
 	margin: 0 auto;
 }
-footer{
-	background-color: #f9f;
+footer pre{
+	overflow-x: hidden;
+    text-overflow: ellipsis;
+	padding: .5rem;
 }
-.flex-column-spaced{
+.flex-spaced{
 	display: flex;
-	flex-direction: column;
 	justify-content: space-between;
 }
-.flex-grow{
-	flex-grow: 100;
+.flex-evenly{
+	display: flex;
+	justify-content: space-evenly;
 }
-.scrollable{
+.column{
+	flex-direction: column;
+}
+.grow-s{
+	flex-grow: 1;
+}
+.grow-m{
+	flex-grow: 2;
+}
+.grow-l{
+	flex-grow: 3;
+}
+.label-btn-list li label{
+	width: 100%;
+	display: block;
+	transition: .2s;
+	position: relative;
+	top: 0;
+	background: #024;
+	color: #048;
+	text-align: center;
+	box-shadow: -1px -1px #fff, -1px 0 #fff, 0 -1px #fff, 1px 1px #000, 1px 0 #000, 0 1px #000;
+}
+.label-btn-list li label:hover{
+	color: #08f;
+	top: 1px;
+}
+.label-btn-list li label:active{
+	color: #0ff;
+	top: 2px;
+}
+.container, .scrollable{
 	position: relative;
 }
-.scrollable > *{
+.container > *, .scrollable > *{
 	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
+	inset: 0;
+}
+.scrollable > *{
 	overflow-y: scroll;
 }
-#nav-section{
-	padding: .5rem;
+.hidden{
+	display: none;
+}
+.t-hidden{
+	transition: .2s;
+	transform: scale(0);	
+}
+input:checked + .t-hidden{
+	transform: scale(1);
+}
+#radio-nav{
+}
+#radio-nav ul li label{
+	color: #abc;
+	padding: .3rem;
+	border-radius: 3px;
 }
 #radio-section{
 }
+
