--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,6 +4,7 @@
 	box-sizing: border-box;
 }
 html, body{
+  font-family: "verdana";
 	height: 100%;
 	background: #012;
 	color: #ace;
@@ -28,7 +29,7 @@ section{
 }
 footer pre{
 	overflow-x: hidden;
-    text-overflow: ellipsis;
+  text-overflow: ellipsis;
 	padding: .5rem;
 }
 .flex-spaced{
@@ -137,6 +138,7 @@ input:checked + .t-hidden{
 
 input[type="range"]{
 	writing-mode: vertical-lr;
+	direction: rtl;
 	appearance: none;
 	background: linear-gradient(#a12, #061);
 	border-radius: .5rem;
